--- a/css/css.css
+++ b/css/css.css
@@ -118,3 +118,24 @@ footer #direita {
       width: 61%;
       margin: auto;
   }
+  table {
+  	border:none;
+  }
+  table td{
+  	width: 136px;
+  	height: 136px;
+  }
+  #telaprincipal {
+  	width: 410px;
+
+  } 
+  table td img {
+  	width: 133px;
+  	height: 135px;
+  	position: relative;
+    left: 46px;
+  }
+  #espaço {
+  	width: 100%;
+  	height: 150px;
+  }
