--- a/css/css.css
+++ b/css/css.css
@@ -53,7 +53,7 @@ header ul .lidois{
 }
 section {
 	position: relative;
-	height: 411px;
+	height: 418px;
 	width: 100%;
 	background-color: #BFBFBF;
     top: 51px;
@@ -149,3 +149,29 @@ h2 {
 	    margin-top: 131px;
     margin-bottom: 0px;
  }
+ button {
+ 	width: 80px;
+ 	height: 40px;
+ 	background-color: red;
+ }
+ #seleçao {
+ 	background-color: #fff;
+ 	position: relative; 	
+ 	width: 80px;
+ 	height: 8px;
+ 	text-align: center;
+ 	color: red;
+ }
+ #pvideo {
+ 	position: relative;
+    left: 496px;
+    top: 12px;
+ }
+ #imagemcentral {
+ 	width: 332px;
+ }
+ #posiçaoseleçao {
+ 	position: relative;
+    height: 543px;
+ }
+ 
